# PolySeek

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  config.docker.yaml  config.yaml  docker-compose.gpu.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmark.md  flickr30k-cn-experiment.md
docs/adr/: 0000-template.md  0001-use-clip-not-vlm.md  0002-frame-level-video-embedding.md  0003-audio-whisper-not-clap.md  0004-embedding-backend-abstraction.md  0005-vector-store-milvus-vs-qdrant.md  0006-pydantic-strong-typed-config.md  0007-text-to-text-chunking.md  0008-gpu-docker-deployment.md  README.md
docs/reports/: report_cnclip.json  report_siglip.json
media_mind/: __init__.py  config.py  context.py
media_mind/api/: __init__.py  schemas.py  server.py
media_mind/cli/: main.py
media_mind/data_gen/: concepts.py  text_gen.py
media_mind/embedding/: chinese_clip.py  openai_clip.py  siglip.py
media_mind/ingestion/: __init__.py  audio_processor.py  image_processor.py  scanner.py  stats.py  video_processor.py
media_mind/search/: __init__.py
media_mind/storage/: milvus_store.py  qdrant_store.py
media_mind/webui/: __init__.py  app.py
polyseek/: __init__.py  config.py  logging_setup.py
polyseek/api/: server.py
polyseek/cli/: __init__.py  main.py
polyseek/data_gen/: __init__.py  shapes.py
polyseek/embedding/: __init__.py  base.py  chinese_clip.py  openai_clip.py  siglip.py
polyseek/ingestion/: audio_processor.py  pipeline.py  text_processor.py
polyseek/search/: engine.py
polyseek/storage/: __init__.py  base.py  qdrant_store.py
polyseek/webui/: app.py
sample_data/: .gitkeep
scripts/: benchmark.py  build_eval_from_captions.py  compare_backends.sh  download_flickr30k_images.py  export_onnx.py  generate_data.py  generate_eval.py  index_all.py  index_incremental.py  prepare_flickr30k_cn.py  report_to_markdown.py  run_eval.py
tests/: conftest.py  test_config.py  test_embedding.py  test_hf_feature_extract.py  test_ingestion.py  test_search.py  test_text_and_timing.py
